[package]
name = "mcclassic2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bevy_ecs = "0.12.1"
byteorder = "1.5.0"
ciborium = "0.2.1"
fixed = "1.24.0"
libflate = "2.0.0"
serde = "1.0.194"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
